added images and content

--- a/index.html
+++ b/index.html
@@ -49,8 +49,26 @@
     <div class="column small-12 text-center">
       <h1>What risk would you take if you knew you could not fail?</h1>
     <h3>Find your uniqueness and your path by asking yourself the right questions. ​</h3>
+    </div>
 
 
+
+    <div class="row text-center">
+      <div class="column small-12 medium-6">
+        <h3>Are you student or graduate?</h3>
+        <p>Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
+        <a class="button" href="#">Learn more</a>
+
+      </div>
+      <div class="column small-12 medium-6">
+        <h3>Are you representing a company?</h3>
+        <p>We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
+        <a class="button" href="#">Learn more</a>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <h3>PARTNERS and CLIENTS</h3>
     </div>
 
 
