--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
     <hr>
     <div class="row">
       <h3>PARTNERS and CLIENTS</h3>
+      <img src="img/1460977038.png">
+      <img src="img/1460976861.png">
+      <img src="img/1460982168.png">
+      <img src="img/1386720_orig.jpg">
+      <img src="img/9927739.png">
+
     </div>
 
 
