--- a/index.html
+++ b/index.html
@@ -67,14 +67,19 @@
       </div>
     </div>
     <hr>
-    <div class="row">
+    <div class="row text-center">
       <h3>PARTNERS and CLIENTS</h3>
       <img src="img/1460977038.png">
       <img src="img/1460976861.png">
       <img src="img/1460982168.png">
-      <img src="img/1386720_orig.jpg">
+      <img src="img/4007523_orig.jpg" style="width: 130px">
       <img src="img/9927739.png">
+    </div>
 
+    <hr>
+    <div class="row text-center">
+      <h3>Testimonials</h3>
+      <p>Lorem ipsum dolor sit amet, case omnium per no. Integre interpretaris ex sea, no ubique legere senserit has, usu iudicabit cotidieque ut. Bonorum impedit gubergren vim te, ei sale aeterno mel. Usu brute fugit atqui cu, vero quidam menandri vim ex. An rebum docendi constituam vis. Dicit iriure civibus eu per.</p>
     </div>
 
 
