added social media

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Foundation for Sites</title>
   <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -48,19 +49,21 @@
   <div class="row">
     <div class="column small-12 text-center">
       <h1>What risk would you take if you knew you could not fail?</h1>
-    <h3>Find your uniqueness and your path by asking yourself the right questions. ​</h3>
+    <h2>Find your uniqueness and your path by asking yourself the right questions.</h2>
     </div>
 
 
 
     <div class="row text-center">
       <div class="column small-12 medium-6">
+        <img src="img/1444470260.png">
         <h3>Are you student or graduate?</h3>
         <p>Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
         <a class="button" href="#">Learn more</a>
 
       </div>
       <div class="column small-12 medium-6">
+        <img src="img/1444470311.png">
         <h3>Are you representing a company?</h3>
         <p>We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
         <a class="button" href="#">Learn more</a>
@@ -81,8 +84,16 @@
       <h3>Testimonials</h3>
       <p>Lorem ipsum dolor sit amet, case omnium per no. Integre interpretaris ex sea, no ubique legere senserit has, usu iudicabit cotidieque ut. Bonorum impedit gubergren vim te, ei sale aeterno mel. Usu brute fugit atqui cu, vero quidam menandri vim ex. An rebum docendi constituam vis. Dicit iriure civibus eu per.</p>
     </div>
+  </div>
 
+  <div class="bottom">
+    <div class="row">
 
+    </div>
+    <div class="row text-center">
+          <span class="fa fa-facebook fa-2x"></span>
+          <span class="fa fa-twitter fa-2x"></span>
+    </div>
 
 
 
