--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<!--+++++HEADER HEADER-->
+  <!--+++++HEADER HEADER-->
   <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
@@ -22,35 +22,39 @@
 
     <div class="top-bar-left">
 
-              <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Yus</li>
+      <ul class="dropdown menu" data-dropdown-menu>
+        <li class="menu-text">Yus</li>
       </ul>
 
     </div>
 
 
-      <div class="top-bar-right">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Youth</a></li>
-          <li><a href="#">Companies</a></li>
-          <li>
-            <a href="#">Events</a>
-            <ul class="menu vertical">
-              <li><a href="#">Resource hub</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
+    <div class="top-bar-right">
+      <ul class="dropdown menu" data-dropdown-menu>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Youth</a></li>
+        <li><a href="#">Companies</a></li>
+        <li>
+          <a href="#">Events</a>
+          <ul class="menu vertical">
+            <li><a href="#">Resource hub</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </div>
-
+  </div>
+<div class="extended">
+<div class="extended header overlay">
   <div class="row">
     <div class="column small-12 text-center">
       <h1>What risk would you take if you knew you could not fail?</h1>
-    <h2>Find your uniqueness and your path by asking yourself the right questions.</h2>
+      <h3>Find your uniqueness and your path by asking yourself the right questions.</h3>
     </div>
+  </div>
+  </div>
+  </div>
 
 
 
@@ -84,15 +88,40 @@
       <h3>Testimonials</h3>
       <p>Lorem ipsum dolor sit amet, case omnium per no. Integre interpretaris ex sea, no ubique legere senserit has, usu iudicabit cotidieque ut. Bonorum impedit gubergren vim te, ei sale aeterno mel. Usu brute fugit atqui cu, vero quidam menandri vim ex. An rebum docendi constituam vis. Dicit iriure civibus eu per.</p>
     </div>
-  </div>
 
-  <div class="bottom">
-    <div class="row">
+
+  <div class="bottom" style="">
+    <div class="row text-center">
+      <div class="column small-12 medium-6 large-3">
+        <h4>SERVICES</h4>
+        <ul class="no-bullet">
+          <li>List item</li>
+          <li>List item</li>
+          <li>List item</li>
+        </ul>
+
+      </div>
+      <div class="column small-12 medium-6 large-3">
+                <h1>SERVICES</h1>
+        <ul class="no-bullet">
+          <li>List item</li>
+          <li>List item</li>
+          <li>List item</li>
+        </ul>
+      </div>
+      <div class="column small-12 medium-6 large-3">
+              <h1>SERVICES</h1>
+        <ul class="no-bullet">
+          <li>List item</li>
+          <li>List item</li>
+          <li>List item</li>
+        </ul></div>
+      <div class="column small-12 medium-6 large-3"></div>
 
     </div>
     <div class="row text-center">
-          <span class="fa fa-facebook fa-2x"></span>
-          <span class="fa fa-twitter fa-2x"></span>
+      <span class="fa fa-facebook fa-2x"></span>
+      <span class="fa fa-twitter fa-2x"></span>
     </div>
 
 
