--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Foundation for Sites</title>
+  <title>Yusudi Clone</title>
   <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="/css/animate.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
@@ -132,9 +133,12 @@
 
 
 
-  <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/jquery.js"></script>
   <script src="js/vendor/what-input.js"></script>
   <script src="js/vendor/foundation.js"></script>
+    <!--====wow script for use with animate css======-->
+    <script src="/js/wow.js"></script>
+
   <script src="js/app.js"></script>
 </body>
 
