modified content in the index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yusudi Clone</title>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,300,300italic,700,400italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="/css/animate.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.css">
@@ -46,8 +47,8 @@
       </ul>
     </div>
   </div>
-<div class="extended">
-<div class="extended header overlay">
+<div class="full_height header overlay">
+<div class="extended  overla">
   <div class="row wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="3.15s">
     <div class="column small-12 text-center">
       <h1>What risk would you take if you knew you could not fail?</h1>
