Modified content and styling

--- a/index.html
+++ b/index.html
@@ -48,17 +48,16 @@
     </div>
   </div>
 <div class="full_height header overlay">
-<div class="extended  overla">
+<div class="">
   <div class="row wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="3.15s">
     <div class="column small-12 text-center">
       <h1>What risk would you take if you knew you could not fail?</h1>
       <h3 class="wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="5.15s">Find your uniqueness and your path by asking yourself the right questions.</h3>
+        <a class="button hollow" href="#">Join Our Program</a>
     </div>
   </div>
   </div>
   </div>
-
-
 
     <div class="row text-center">
       <div class="column small-12 medium-6">
