added content and styling

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
     <div class="row text-center">
       <div class="column small-12 medium-6">
         <img src="img/1444470260.png">
-        <h3 class="wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="3s">Are you student or graduate?</h3>
-        <p class="wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="4s">Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
-        <a class="button" href="#">Learn more</a>
+        <h3 class="wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="1s">Are you student or graduate?</h3>
+        <p class="wow bounceInUp center span3"  data-wow-iteration="1" data-wow-duration="2s">Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
+        <a class="button hollow" href="#">Learn more</a>
 
       </div>
       <div class="column small-12 medium-6">
         <img src="img/1444470311.png">
-        <h3 class="wow bounceInDown center span3" data-wow-offset="10" data-wow-iteration="1" data-wow-duration="5s">Are you representing a company?</h3>
-        <p class="wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="6s">We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
-        <a class="button" href="#">Learn more</a>
+        <h3 class="wow bounceInDown center span3" data-wow-offset="10" data-wow-iteration="1" data-wow-duration="2s">Are you representing a company?</h3>
+        <p class="wow bounceInRight center span3"  data-wow-iteration="1" data-wow-duration="2s">We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
+        <a class="button hollow" href="#">Learn more</a>
       </div>
     </div>
     <hr>
@@ -92,7 +92,9 @@
 
 
   <div class="bottom" style="">
-    <div class="row text-center">
+    <div class="row text-cente">
+        <div class="column small-12 large-8 large-centered">
+            <div class="">
       <div class="column small-12 medium-6 large-3">
         <h4>SERVICES</h4>
         <ul class="no-bullet">
@@ -102,6 +104,8 @@
         </ul>
 
       </div>
+                </div>
+            </div>
       <div class="column small-12 medium-6 large-3">
                 <h1>SERVICES</h1>
         <ul class="no-bullet">
