added footer content and styling

--- a/index.html
+++ b/index.html
@@ -2,166 +2,178 @@
 <html class="no-js" lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yusudi Clone</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yusudi Clone</title>
     <link href='//fonts.googleapis.com/css?family=Roboto:400,300,300italic,700,400italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
-  <link rel="stylesheet" href="css/foundation.css">
-  <link rel="stylesheet" href="/css/animate.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.css">
-  <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
-  <!--+++++HEADER HEADER-->
-  <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-    <button class="menu-icon" type="button" data-toggle></button>
-    <div class="title-bar-title">Menu</div>
-  </div>
-
-  <div class="top-bar" id="example-menu">
-
-    <div class="top-bar-left">
-
-      <ul class="dropdown menu" data-dropdown-menu>
-        <li class="menu-text">Yus</li>
-      </ul>
-
+    <!--+++++HEADER HEADER-->
+    <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+        <button class="menu-icon" type="button" data-toggle></button>
+        <div class="title-bar-title">Menu</div>
     </div>
 
+    <div class="top-bar" id="example-menu">
 
-    <div class="top-bar-right">
-      <ul class="dropdown menu" data-dropdown-menu>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Youth</a></li>
-        <li><a href="#">Companies</a></li>
-        <li>
-          <a href="#">Events</a>
-          <ul class="menu vertical">
-            <li><a href="#">Resource hub</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+        <div class="top-bar-left">
+
+            <ul class="dropdown menu" data-dropdown-menu>
+                <li class="menu-text">Yus</li>
+            </ul>
+
+        </div>
+
+
+        <div class="top-bar-right">
+            <ul class="dropdown menu" data-dropdown-menu>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Youth</a></li>
+                <li><a href="#">Companies</a></li>
+                <li>
+                    <a href="#">Events</a>
+                    <ul class="menu vertical">
+                        <li><a href="#">Resource hub</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
-<div class="full_height header overlay">
-<div class="">
-  <div class="row wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="3.15s">
-    <div class="column small-12 text-center">
-      <h1>What risk would you take if you knew you could not fail?</h1>
-      <h3 class="wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="5.15s">Find your uniqueness and your path by asking yourself the right questions.</h3>
-        <a class="button hollow" href="#">Join Our Program</a>
-    </div>
-  </div>
-  </div>
-  </div>
-
-    <div class="row text-center">
-      <div class="column small-12 medium-6">
-        <img src="img/1444470260.png">
-        <h3 class="wow bounceInDown center span3"  data-wow-iteration="1" data-wow-duration="1s">Are you student or graduate?</h3>
-        <p class="wow bounceInUp center span3"  data-wow-iteration="1" data-wow-duration="2s">Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
-        <a class="button hollow" href="#">Learn more</a>
-
-      </div>
-      <div class="column small-12 medium-6">
-        <img src="img/1444470311.png">
-        <h3 class="wow bounceInDown center span3" data-wow-offset="10" data-wow-iteration="1" data-wow-duration="2s">Are you representing a company?</h3>
-        <p class="wow bounceInRight center span3"  data-wow-iteration="1" data-wow-duration="2s">We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
-        <a class="button hollow" href="#">Learn more</a>
-      </div>
-    </div>
-    <hr>
-    <div class="row text-center">
-      <h3>PARTNERS and CLIENTS</h3>
-      <img src="img/1460977038.png">
-      <img src="img/1460976861.png">
-      <img src="img/1460982168.png">
-      <img src="img/4007523_orig.jpg" style="width: 130px">
-      <img src="img/9927739.png">
-    </div>
-
-    <hr>
-    <div class="row text-center">
-      <h3>Testimonials</h3>
-      <p>Lorem ipsum dolor sit amet, case omnium per no. Integre interpretaris ex sea, no ubique legere senserit has, usu iudicabit cotidieque ut. Bonorum impedit gubergren vim te, ei sale aeterno mel. Usu brute fugit atqui cu, vero quidam menandri vim ex. An rebum docendi constituam vis. Dicit iriure civibus eu per.</p>
-    </div>
-
-
-  <div class="bottom" style="">
-    <div class="row text-cente">
-        <div class="column small-12 large-8 large-centered">
-            <div class="">
-      <div class="column small-12 medium-6 large-3">
-        <h4>SERVICES</h4>
-        <ul class="no-bullet">
-          <li>List item</li>
-          <li>List item</li>
-          <li>List item</li>
-        </ul>
-
-      </div>
+    <div class="full_height header overlay">
+        <div class="">
+            <div class="row wow bounceInDown center span3" data-wow-iteration="1" data-wow-duration="3.15s">
+                <div class="column small-12 text-center">
+                    <h1>What risk would you take if you knew you could not fail?</h1>
+                    <h3 class="wow bounceInDown center span3" data-wow-iteration="1" data-wow-duration="5.15s">Find your uniqueness and your path by asking yourself the right questions.</h3>
+                    <a class="button hollow" href="#">Join Our Program</a>
                 </div>
             </div>
-      <div class="column small-12 medium-6 large-3">
-                <h1>SERVICES</h1>
-        <ul class="no-bullet">
-          <li>List item</li>
-          <li>List item</li>
-          <li>List item</li>
-        </ul>
-      </div>
-      <div class="column small-12 medium-6 large-3">
-              <h1>SERVICES</h1>
-        <ul class="no-bullet">
-          <li>List item</li>
-          <li>List item</li>
-          <li>List item</li>
-        </ul></div>
-      <div class="column small-12 medium-6 large-3"></div>
-
+        </div>
     </div>
+
     <div class="row text-center">
-      <span class="fa fa-facebook fa-2x"></span>
-      <span class="fa fa-twitter fa-2x"></span>
+        <div class="column small-12 medium-6">
+            <img src="img/1444470260.png">
+            <h3 class="wow bounceInDown center span3" data-wow-iteration="1" data-wow-duration="1s">Are you student or graduate?</h3>
+            <p class="wow bounceInUp center span3" data-wow-iteration="1" data-wow-duration="2s">Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
+            <a class="button hollow" href="#">Learn more</a>
+
+        </div>
+        <div class="column small-12 medium-6">
+            <img src="img/1444470311.png">
+            <h3 class="wow bounceInDown center span3" data-wow-offset="10" data-wow-iteration="1" data-wow-duration="2s">Are you representing a company?</h3>
+            <p class="wow bounceInRight center span3" data-wow-iteration="1" data-wow-duration="2s">We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
+            <a class="button hollow" href="#">Learn more</a>
+        </div>
+    </div>
+    <hr>
+    <div class="row text-center">
+        <h3>PARTNERS and CLIENTS</h3>
+        <img src="img/1460977038.png">
+        <img src="img/1460976861.png">
+        <img src="img/1460982168.png">
+        <img src="img/4007523_orig.jpg" style="width: 130px">
+        <img src="img/9927739.png">
+    </div>
+
+    <hr>
+    <div class="row text-center">
+        <h3>Testimonials</h3>
+        <p>Lorem ipsum dolor sit amet, case omnium per no. Integre interpretaris ex sea, no ubique legere senserit has, usu iudicabit cotidieque ut. Bonorum impedit gubergren vim te, ei sale aeterno mel. Usu brute fugit atqui cu, vero quidam menandri vim ex. An rebum docendi constituam vis. Dicit iriure civibus eu per.</p>
+    </div>
+
+
+    <div class="bottom">
+        <div class="row">
+            <div class="column small-12 large-8 large-centered">
+                <div class="row">
+                    <div class="column small-12 medium-6 large-3">
+                        <h4>SERVICES</h4>
+                        <ul class="no-bullet">
+                            <li>List item</li>
+                            <li>List item</li>
+                            <li>List item</li>
+                        </ul>
+
+                    </div>
+
+                <div class="column small-12 medium-6 large-3">
+                    <h4>SERVICES</h4>
+                    <ul class="no-bullet">
+                        <li>List item</li>
+                        <li>List item</li>
+                        <li>List item</li>
+                    </ul>
+
+
+                </div>
+                <div class="column small-12 medium-6 large-3">
+                    <h4>SERVICES</h4>
+                    <ul class="no-bullet">
+                        <li>List item</li>
+                        <li>List item</li>
+                        <li>List item</li>
+                    </ul>
+
+                    </div>
+                    <div class="column small-12 medium-6 large-3">
+                    <h4>SERVICES</h4>
+                    <ul class="no-bullet">
+                        <li>List item</li>
+                        <li>List item</li>
+                        <li>List item</li>
+                    </ul>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    <div class="row text-center">
+        <span class="fa fa-facebook fa-2x"></span>
+        <span class="fa fa-twitter fa-2x"></span>
     </div>
 
 
 
-  </div>
- <section class="wow slideInLeft" data-wow-offset="10"  data-wow-iteration="10">
-    FSJDHSVDSVDSVDNVSDNMV
+    <!--Close footer(bottom section)-->
+    <section class="wow slideInLef text-center" data-wow-offset="10" data-wow-iteration="10">
+        <p>Copyright © 2016 Yusudi, Honass Riara Apartments, Suite A1, Riara Road, All right reserved</p>
 
     </section>
-
+</div>
 
 
 
     <script src="js/vendor/jquery.js"></script>
-  <script src="js/vendor/what-input.js"></script>
-  <script src="js/vendor/foundation.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
     <!--====wow script for use with animate css======-->
     <script src="/js/wow.js"></script>
     <script>
-    var wow = new WOW(
-  {
-    boxClass:     'wow',      // animated element css class (default is wow)
-    animateClass: 'animated', // animation css class (default is animated)
-    offset:       0,          // distance to the element when triggering the animation (default is 0)
-    mobile:       true,       // trigger animations on mobile devices (default is true)
-    live:         true,       // act on asynchronously loaded content (default is true)
-    callback:     function(box) {
-      // the callback is fired every time an animation is started
-      // the argument that is passed in is the DOM node being animated
-    },
-    scrollContainer: null // optional scroll container selector, otherwise use window
-  }
-);
-wow.init();
-
+        var wow = new WOW({
+            boxClass: 'wow', // animated element css class (default is wow)
+            animateClass: 'animated', // animation css class (default is animated)
+            offset: 0, // distance to the element when triggering the animation (default is 0)
+            mobile: true, // trigger animations on mobile devices (default is true)
+            live: true, // act on asynchronously loaded content (default is true)
+            callback: function (box) {
+                // the callback is fired every time an animation is started
+                // the argument that is passed in is the DOM node being animated
+            },
+            scrollContainer: null // optional scroll container selector, otherwise use window
+        });
+        wow.init();
     </script>
 
 
@@ -171,7 +183,7 @@ wow.init();
 
 
 
-  <script src="js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
