added content and styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="title-bar-title">Menu</div>
     </div>
 
-    <div class="top-bar" id="example-menu">
+    <div class="top-bar wow fadeInDown" id="example-menu" data-wow-delay="0.5s">
 
         <div class="top-bar-left">
 
@@ -49,11 +49,11 @@
     </div>
     <div class="full_height header overlay">
         <div class="">
-            <div class="row wow bounceInDown center span3" data-wow-iteration="1" data-wow-duration="3.15s">
+            <div class="row center span3" data-wow-iteration="1" >
                 <div class="column small-12 text-center">
-                    <h1>What risk would you take if you knew you could not fail?</h1>
-                    <h3 class="wow bounceInDown center span3" data-wow-iteration="1" data-wow-duration="5.15s">Find your uniqueness and your path by asking yourself the right questions.</h3>
-                    <a class="button hollow" href="#">Join Our Program</a>
+                    <h1  class="wow fadeInDown" data-wow-duration="1s">What risk would you take if you knew you could not fail?</h1>
+                    <h3 class="wow fadeInUp center span3" data-wow-iteration="1" data-wow-duration="1.5s">Find your uniqueness and your path by asking yourself the right questions.</h3>
+                    <a class="button hollow wow fadeInUp" href="#" data-wow-duration="2.0">Join Our Program</a><br>
                 </div>
             </div>
         </div>
@@ -148,6 +148,7 @@
 
     <!--Close footer(bottom section)-->
     <section class="wow slideInLef text-center" data-wow-offset="10" data-wow-iteration="10">
+        <hr>
         <p>Copyright © 2016 Yusudi, Honass Riara Apartments, Suite A1, Riara Road, All right reserved</p>
 
     </section>
