added content and design

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <div class="title-bar-title">Menu</div>
     </div>
 
-    <div class="top-bar wow fadeInDown" id="example-menu" data-wow-delay="0.5s">
+    <div class="top-bar" id="example-menu" >
 
         <div class="top-bar-left">
 
             <ul class="dropdown menu" data-dropdown-menu>
-                <li class="menu-text">Yus</li>
+                <li class="menu-text wow fadeInLeft" data-wow-delay="1.5s">Yus</li>
             </ul>
 
         </div>
 
 
         <div class="top-bar-right">
-            <ul class="dropdown menu" data-dropdown-menu>
+            <ul class="dropdown menu wow fadeInDown" data-dropdown-menu data-wow-delay="0.5s">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Youth</a></li>
@@ -62,15 +62,15 @@
     <div class="row text-center">
         <div class="column small-12 medium-6">
             <img src="img/1444470260.png">
-            <h3 class="wow bounceInDown center span3" data-wow-iteration="1" data-wow-duration="1s">Are you student or graduate?</h3>
-            <p class="wow bounceInUp center span3" data-wow-iteration="1" data-wow-duration="2s">Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
+            <h3 class="wow fadeInDown center span3" data-wow-iteration="1" data-wow-duration="1s">Are you student or graduate?</h3>
+            <p class="wow fadeIn center span3" data-wow-iteration="1" data-wow-duration="3s">Yusudi is a life skills development program. As our trainee, you will understand your unique professional value, combine it with the necessary business skills to grow your career as an employee or an entrepreneur. You will become an agent of change, who can build the local, national and international society.</p>
             <a class="button hollow" href="#">Learn more</a>
 
         </div>
         <div class="column small-12 medium-6">
             <img src="img/1444470311.png">
-            <h3 class="wow bounceInDown center span3" data-wow-offset="10" data-wow-iteration="1" data-wow-duration="2s">Are you representing a company?</h3>
-            <p class="wow bounceInRight center span3" data-wow-iteration="1" data-wow-duration="2s">We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
+            <h3 class="wow fadeInDown center span3" data-wow-offset="10" data-wow-iteration="1" data-wow-duration="2s">Are you representing a company?</h3>
+            <p class="wow fadeInRight center span3" data-wow-iteration="1" data-wow-duration="2s">We see opportunities in the untapped pool of youth talent and turn them into solutions for our partners. We serve companies interested in engaging youth to grow their business through our internship programs. Our program includes interns pre-selection, training, and mentorship during and after the internships. Become a Yusudi partner and enjoy the benefits of accessing youth talent.</p>
             <a class="button hollow" href="#">Learn more</a>
         </div>
     </div>
