added logo image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div class="top-bar-left">
 
             <ul class="dropdown menu" data-dropdown-menu>
-                <li class="menu-text wow fadeInLeft" data-wow-delay="1.5s">Yus</li>
+                <li class="menu-text wow fadeInLeft" data-wow-delay="1.5s">
+                  <img src="img/1445794954.png">
+                </li>
             </ul>
 
         </div>
