--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
 
                     <ul class="no-bullet">
                         <li>List item</li>
-                        <li>List item</li>
-                        <li>List item</li>
+                        <li>Companies</li>
                     </ul>
 
 
